updating schema.sql
