# docs/swagger.json
@@ -934,6 +934,10 @@
                     "minimum": 1,
                     "example": 3
                 },
+                "doing": {
+                    "type": "string",
+                    "example": "1h"
+                },
                 "exercise_id": {
                     "type": "integer",
                     "minimum": 1,
@@ -949,9 +953,13 @@
                     "minimum": 1,
                     "example": 10
                 },
+                "rest": {
+                    "type": "string",
+                    "example": "30m"
+                },
                 "time": {
                     "type": "string",
-                    "example": "2023-10-05T15:30:00Z"
+                    "example": "1h30m"
                 },
                 "training_id": {
                     "type": "integer",
@@ -980,11 +988,15 @@
         "github_com_EnduranNSU_trainings_internal_adapter_in_http_dto.CreateTrainingRequest": {
             "type": "object",
             "required": [
-                "planned",
+                "planned_date",
                 "user_id"
             ],
             "properties": {
-                "done": {
+                "actual_date": {
+                    "type": "string",
+                    "example": "2023-10-05T16:30:00Z"
+                },
+                "finished_at": {
                     "type": "string",
                     "example": "2023-10-05T16:30:00Z"
                 },
@@ -992,7 +1004,7 @@
                     "type": "boolean",
                     "example": false
                 },
-                "planned": {
+                "planned_date": {
                     "type": "string",
                     "example": "2023-10-05T15:00:00Z"
                 },
@@ -1002,9 +1014,21 @@
                     "minimum": 1,
                     "example": 5
                 },
-                "total_time": {
+                "started_at": {
+                    "type": "string",
+                    "example": "2023-10-05T15:00:00Z"
+                },
+                "total_duration": {
                     "type": "string",
                     "example": "1h30m"
+                },
+                "total_exercise_time": {
+                    "type": "string",
+                    "example": "1h"
+                },
+                "total_rest_time": {
+                    "type": "string",
+                    "example": "30m"
                 },
                 "user_id": {
                     "type": "string",
@@ -1068,6 +1092,10 @@
                     "type": "integer",
                     "example": 3
                 },
+                "doing": {
+                    "type": "string",
+                    "example": "1h"
+                },
                 "exercise_id": {
                     "type": "integer",
                     "example": 1
@@ -1084,9 +1112,13 @@
                     "type": "integer",
                     "example": 10
                 },
+                "rest": {
+                    "type": "string",
+                    "example": "30m"
+                },
                 "time": {
                     "type": "string",
-                    "example": "2023-10-05T15:30:00Z"
+                    "example": "1h30m"
                 },
                 "training_id": {
                     "type": "integer",
@@ -1101,7 +1133,7 @@
         "github_com_EnduranNSU_trainings_internal_adapter_in_http_dto.TrainingResponse": {
             "type": "object",
             "properties": {
-                "done": {
+                "actual_date": {
                     "type": "string",
                     "example": "2023-10-05T16:30:00Z"
                 },
@@ -1111,6 +1143,10 @@
                         "$ref": "#/definitions/github_com_EnduranNSU_trainings_internal_adapter_in_http_dto.TrainedExerciseResponse"
                     }
                 },
+                "finished_at": {
+                    "type": "string",
+                    "example": "2023-10-05T16:30:00Z"
+                },
                 "id": {
                     "type": "integer",
                     "example": 1
@@ -1119,7 +1155,7 @@
                     "type": "boolean",
                     "example": true
                 },
-                "planned": {
+                "planned_date": {
                     "type": "string",
                     "example": "2023-10-05T15:00:00Z"
                 },
@@ -1127,9 +1163,21 @@
                     "type": "integer",
                     "example": 5
                 },
-                "total_time": {
+                "started_at": {
+                    "type": "string",
+                    "example": "2023-10-05T15:00:00Z"
+                },
+                "total_duration": {
                     "type": "string",
                     "example": "1h30m"
+                },
+                "total_exercise_time": {
+                    "type": "string",
+                    "example": "1h"
+                },
+                "total_rest_time": {
+                    "type": "string",
+                    "example": "30m"
                 },
                 "user_id": {
                     "type": "string",
@@ -1164,9 +1212,6 @@
         },
         "github_com_EnduranNSU_trainings_internal_adapter_in_http_dto.UpdateTrainedExerciseRequest": {
             "type": "object",
-            "required": [
-                "id"
-            ],
             "properties": {
                 "approaches": {
                     "type": "integer",
@@ -1174,10 +1219,9 @@
                     "minimum": 1,
                     "example": 4
                 },
-                "id": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 1
+                "doing": {
+                    "type": "string",
+                    "example": "1h15m"
                 },
                 "notes": {
                     "type": "string",
@@ -1189,9 +1233,13 @@
                     "minimum": 1,
                     "example": 12
                 },
+                "rest": {
+                    "type": "string",
+                    "example": "30m"
+                },
                 "time": {
                     "type": "string",
-                    "example": "2023-10-05T15:45:00Z"
+                    "example": "1h45m"
                 },
                 "weight": {
                     "type": "number",
@@ -1204,24 +1252,22 @@
         "github_com_EnduranNSU_trainings_internal_adapter_in_http_dto.UpdateTrainingRequest": {
             "type": "object",
             "required": [
-                "id",
-                "planned"
+                "planned_date"
             ],
             "properties": {
-                "done": {
+                "actual_date": {
                     "type": "string",
                     "example": "2023-10-05T16:30:00Z"
                 },
-                "id": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 1
+                "finished_at": {
+                    "type": "string",
+                    "example": "2023-10-05T16:30:00Z"
                 },
                 "is_done": {
                     "type": "boolean",
                     "example": true
                 },
-                "planned": {
+                "planned_date": {
                     "type": "string",
                     "example": "2023-10-05T15:00:00Z"
                 },
@@ -1231,9 +1277,21 @@
                     "minimum": 1,
                     "example": 5
                 },
-                "total_time": {
+                "started_at": {
+                    "type": "string",
+                    "example": "2023-10-05T15:00:00Z"
+                },
+                "total_duration": {
                     "type": "string",
                     "example": "1h30m"
+                },
+                "total_exercise_time": {
+                    "type": "string",
+                    "example": "1h"
+                },
+                "total_rest_time": {
+                    "type": "string",
+                    "example": "30m"
                 }
             }
         }
